--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "project",
   "dependencies": {
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serverless": "^3.35.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "vite": "latest"
