--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "project",
-  "dependencies": {
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "serverless": "^3.35.2",
-    "serverless-http": "^3.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "vite": "latest"
   },
